# BlocRA-HQ

./: .env.production  .gitignore  ADMIN_DASHBOARD_GUIDE.md  AI_SQL_FLOW.md  ALCHEMY_BACKEND_COMPLETE.md  ALCHEMY_INTEGRATION_COMPLETE.md  ALCHEMY_INTEGRATION_GUIDE.md  ALL_FIXES_SUMMARY.md  AUTH_TESTS_COMPLETE.md  AUTH_TESTS_README.md  BASE_CONTRACT_ANALYSIS.md  CHANGES_SUMMARY.txt  CLEANUP_REPORT.md  CODEBASE_OVERVIEW.md  COMPLETE_DEPLOYMENT_FIX.md  COMPLETE_FIX_REPORT.md  COMPLETE_SUMMARY.txt  CONTRACTS_EDA_FIX.md  CONTRACT_EDA_TESTS_COMPLETE.md  CONTRACT_EDA_TESTS_README.md  CONTRACT_EVENTS_MULTICHAIN_ISSUE.md  DASHBOARD_BUILDER_GUIDE.md  DASHBOARD_BUILDER_V2.md  DEEP_SCAN_INDEX.md  DEEP_SCAN_REPORT.md  DEPLOYMENT_CHECKLIST.md  EVENT_FETCHING_FIX.md  FINAL_ALCHEMY_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  FIXES_APPLIED.md  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  FUTURE_DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  INSTANT_SCAN_MODE.md  MASSIVE_BLOCK_RANGE_UPDATE.md  MIGRATION_TO_NEW_UTILITIES.md  MOBILE_AND_AUTH_FIXES.md  (+46 more)
backend-rust/: .env.production  .gitignore  ALCHEMY_BACKEND_INTEGRATION.md  ARCHITECTURE.md  COMPARISON.md  Cargo.toml  Dockerfile  FEATURE_PARITY.md  MIGRATION_GUIDE.md  PAYMENT_SYSTEM.md  QUICK_REFERENCE.md  README.md  RENDER_DEPLOYMENT.md  TROUBLESHOOTING.md  blocra-backend.service  build.sh  render-start.sh  test-alchemy-backend.sh  test-api.sh
backend-rust/migrations/: 001_create_users.sql  002_create_bounties.sql  003_create_bounty_participants.sql  004_create_submissions.sql  (+7 more)
(+99 files in other folders)
