[package]
name = "blocra-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"
actix-files = "0.6"
actix-rt = "2.10"

# WebSocket support
actix-ws = "0.3"
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.16"
google-oauth = "1.0"

# Utilities
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"

# Security
actix-governor = "0.6"
validator = { version = "0.18", features = ["derive"] }

# HTTP client for RPC
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async utilities
futures = "0.3"
